# pypalettes

./: LICENSE  README.md  pyproject.toml  setup.py
parsers/: README.md  generate_palettes.py  main.py  manual_palettes.json  utils.py
pypalettes/: __init__.py  colormap.py  get_colors.py  main.py
